<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appcolor"
    android:id="@+id/category_layout"
    app:tabMode="scrollable"
    app:tabTextAppearance="@style/MineCustomTabText"
    app:tabTextColor="@color/tabtextcolors"
    >


    <android.support.design.widget.TabItem

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/general"
        android:text="@string/general"/>
    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/business"
        android:text="@string/business"/>
    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/science"
        android:text="@string/science"/>
    <android.support.design.widget.TabItem
        android:id="@+id/technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technology"/>
    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sports"
        android:text="@string/sports"/>
    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/health"
        android:text="@string/health"/>
    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entertainment"
        android:text="@string/entertainment"/>

</android.support.design.widget.TabLayout>